--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.5",
+    "bootswatch": "^5.3.5",
     "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-toastr": "^19.0.0",
