--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/bootswatch/dist/united/bootstrap.min.css",
+              "node_modules/ngx-spinner/animations/ball-pulse-sync.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
