--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@microsoft/signalr": "^8.0.7",
     "bootstrap": "^5.3.5",
     "bootswatch": "^5.3.5",
     "jwt-decode": "^4.0.0",
